 * Episoder should now work with Python 3
 * Switched from distutils to setuptools
 * We now use the new TVDB JSON API
 * Rewrote the epguides.com parser in pure Python
 * Rewrote large parts of the database code
 * Thanks to chrisspen for his contributions
 * Added option to only list active shows (chrisspen)
 * Added the number of episodes to the list of shows (chrisspen)

== v0.7.3 (7 Nov 2015) ==
 * Fixed a syntax error in the list of shows
 * Fixed season number parsing for epguides.com (thanks to jethrogb)

== v0.7.2 (26 Sep 2015) ==
 * Dropped unneeded dependency on BeautifulSoup
 * Fixed episode number parsing for epguides.com (thanks to jethrogb)
 * Improved python3 compatibility

== v0.7.1 (27 Apr 2014) ==
 * Accept unicode characters in prodnum fields

== v0.7.0 (14 Oct 2013) ==
 * Added support for TheTVDB.com
 * Removed support for tv.com
 * Changed command-line arguments. See the man page for details
 * Removed the ability to specify shows in the configuration file
 * Reorganized the command line options. Check the documentation for details
 * Updated the epguides.com parser to ignore trailer links in episode names
 * Fixed some more encoding issues in the console renderer
 * Changed license to GPLv3

== v0.6.5 (6 Oct 2010) ==
 * Updated the epguides.com parser to ignore links to trailers in episode names

== v0.6.4 (25 Jun 2010) ==
 * Filter javascript from tv.com pages because it confuses beautifulsoup 3.1

== v0.6.3 (23 Jun 2010) ==
 * The epguides parser now properly reads the season number for more shows

== v0.6.2 (08 Nov 2009) ==
 * Updated tv.com parser (show names need to be lower-case now!)
 * Added -S option to specify a show id for (forced) updates

== v0.6.1 (26 Aug 2009) ==
 * Episoder can now talk to any database supported by sqlalchemy (see README)
 * Tell awk to process utf8 (for epguides parser)
 * Catch (and properly log) some more HTTP exceptions

== v0.6.0 (8 Aug 2009) ==