@@ -7,6 +7,7 @@
  * Thanks to chrisspen for his contributions
  * Added option to only list active shows (chrisspen)
  * Added the number of episodes to the list of shows (chrisspen)
+ * Added email notification feature via 'episoder notify' (chrisspen)
 
 == v0.7.3 (7 Nov 2015) ==
  * Fixed a syntax error in the list of shows
